--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,11 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
-
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
+An app built in Ruby on Rails as a tutorial.
 
 
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+* Ruby version 2.3.1
+
+* Rails-JobBoard/screenshot-1.png
+
+* Rails-JobBoard/screenshot-2.png
+
